# Nomad

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp
Assets/: Triangle.vert.glsl
Assets/Shaders/: Trangle.frag.spv  Triangle.frag.glsl  VBufferTriangle.frag.glsl  VBufferTriangle.vert.glsl  VBufferTriangle.vert.spv
Nomad/: CMakeLists.txt
Nomad/Include/GPU/: CommandPool.h  GPUContext.h  PhysicalDevice.h  Semaphore.h  Shader.h
Nomad/Include/Graphics/: CommandPool.h  RenderPass.h  Shader.h  Swapchain.h  Vertex.h
Nomad/Include/Platform/: VulkanPlatform.h  Window.h
Nomad/Include/Utils/: PopCount.h  Utils.h  VulkanUtils.h
Nomad/Source/: main.cpp
Nomad/Source/GPU/: GPUContext.cpp  Semaphore.cpp  Shader.cpp  vk_mem_alloc.cpp
Nomad/Source/Graphics/: RenderPass.cpp  Shader.cpp  Swapchain.cpp
